--- a/demo/src/main/res/layout/activity_after_fab_animation.xml
+++ b/demo/src/main/res/layout/activity_after_fab_animation.xml
@@ -3,17 +3,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_actionbar"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        style="@style/ToolBarStyle"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:titleTextAppearance="@style/ToolbarTitle"
-        android:minHeight="56dp"
-        android:elevation="2dp" />
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            style="@style/ToolBarStyle"/>
+
+    </android.support.design.widget.AppBarLayout>
 
 </RelativeLayout>
