--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -2,23 +2,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_actionbar"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        style="@style/ToolBarStyle"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:titleTextAppearance="@style/ToolbarTitle"
-        android:minHeight="56dp"
-        android:paddingLeft="36dp"
-        android:elevation="2dp" />
+        android:id="@+id/appbar_layout">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            style="@style/ToolBarStyle"/>
+
+    </android.support.design.widget.AppBarLayout>
+
     <ListView
         android:id="@+id/list_mails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_actionbar"/>
+        android:layout_below="@id/appbar_layout"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -26,20 +29,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_edit_white_24dp"
         app:borderWidth="0dp"
         app:fabSize="normal"
         app:rippleColor="@color/primary"/>
 
-    <com.github.fabtransitionactivity.SheetLayout
+    <com.github.fabtransitionactivity.FABActivityTransitionLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
         app:ft_container_gravity="center"
         app:ft_color="@color/primary"
-        android:elevation="2dp"/>
+        app:elevation="2dp"/>
 
 </RelativeLayout>
