--- a/demo/src/main/res/layout/list_item_mail.xml
+++ b/demo/src/main/res/layout/list_item_mail.xml
@@ -12,7 +12,8 @@
         android:src="@drawable/oval_mail"
         android:layout_margin="16dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/text_label_email"
@@ -21,6 +22,7 @@
         android:layout_margin="16dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:textColor="@android:color/white"
         android:textAllCaps="true"
         android:gravity="center"
@@ -35,6 +37,7 @@
         android:layout_marginTop="12dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/image_email"
+        android:layout_toEndOf="@id/image_email"
         android:textColor="@color/primary_text"
         android:textSize="16sp"
         android:fontFamily="sans-serif-light"
@@ -45,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/image_email"
+        android:layout_toEndOf="@id/image_email"
         android:layout_below="@id/text_title_email"
         android:textColor="@color/secondary_text"
         android:textSize="14sp"
@@ -52,6 +56,7 @@
         android:maxLines="2"
         android:ellipsize="end"
         android:layout_marginRight="48dp"
+        android:layout_marginEnd="48dp"
         android:lineSpacingExtra="2dp"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"/>
 
@@ -61,10 +66,12 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/text_title_email"
         android:layout_toRightOf="@id/text_message_email"
+        android:layout_toEndOf="@id/text_message_email"
         android:textColor="@color/secondary_text"
         android:textSize="13sp"
         android:fontFamily="sans-serif-light"
         android:layout_marginLeft="-48dp"
+        android:layout_marginStart="-48dp"
         tools:text="Nov 5"/>
 
     <ImageView
@@ -72,7 +79,10 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/text_message_email"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_star_border_black_24dp"
-        android:tint="@color/secondary_text"/>
+        android:tint="@color/secondary_text"
+        android:contentDescription="@string/star"/>
 </RelativeLayout>
