--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -33,18 +33,16 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_edit_white_24dp"
-        app:borderWidth="0dp"
-        app:fabSize="normal"
-        app:rippleColor="@color/primary"/>
+        android:src="@drawable/ic_edit_white_24dp"/>
 
     <com.github.fabtransitionactivity.FABActivityTransitionLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        app:ft_container_gravity="center"
-        app:ft_color="@color/primary"
+        android:color="@color/primary"
+        app:containerGravity="center"
+        app:atl_fabSize="normal"
         app:elevation="2dp"/>
 
 </RelativeLayout>
