Update all dependencies, min sdk 19, compile/target 26, warning fixes

--- a/demo/src/main/res/values/styles.xml
+++ b/demo/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="color">#FFFFFF</item>
     </style>
 
-    <style name="WidgetStyle" parent="style/ThemeOverlay.AppCompat.Light">
+    <style name="WidgetStyle" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorControlNormal">@android:color/white</item>
     </style>
 </resources>
